improve swagger documentation, fix payment creation and prometheus gauge amount setting
