# app/Http/Requests/LoginRequest.php
@@ -22,8 +22,8 @@ class LoginRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'username' => 'required|string|exists:users,username',
-            'password' => 'required|string',
+            'username' => 'required|string|min:1',
+            'password' => 'required|string|min:1',
         ];
     }
 }
